# cc-notify

./: .gitignore  LICENSE  README.md  build.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: claude-code-hooks.md  distribution.md  requirements.md  windows-notifications.md
examples/: config-example.json  settings-snippet.json
scripts/: build-windows.sh  create_icon.py  pre-push-check.sh  setup-hooks.ps1  setup-hooks.sh
src/: config.py  hooks_setup.py  main.py  messages.py  notifier.py  server.py  state.py  tray.py  updater.py  version.py
