[build-system]
requires = ["setuptools>=65"]
# Use the classic, widely-available backend rather than the newer
# setuptools.backends entry point (requires setuptools 68+).
build-backend = "setuptools.build_meta"

[project]
name = "cc-notify"
version = "0.1.4"
description = "Windows tray app that sends native notifications for Claude Code events"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
# Runtime dependencies — must be available on the Windows machine or bundled by PyInstaller.
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "win11toast>=0.36",
    "pystray>=0.19",
    "pillow>=10.0",
    # Provides the Mozilla CA bundle for reliable HTTPS in PyInstaller bundles.
    # urllib's default SSL context cannot find the Windows certificate store
    # inside a frozen executable; certifi's self-contained bundle works everywhere.
    "certifi>=2024.0",
]

# Build-time only; not bundled into the EXE.
[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage   = "https://github.com/Decent-B/cc-notify"
Repository = "https://github.com/Decent-B/cc-notify"
Issues     = "https://github.com/Decent-B/cc-notify/issues"

[tool.setuptools.packages.find]
where = ["src"]
